合并至20240721 开发Lavac和Panger插件系统
A=增加, B=修复, C=更改, D=删除

Lavac 0.9.0 - 0.10.2
实装的特性:
    扩展诊断数据(支持表达式Word的index)
    LavaAPI
        加入了FieldWriteReplace用于实现自动属性

    JVM11 NestHost
        自动生成桥接方法(Java11以下)
    JVM17 PermittedSubClasses => Abstract Enum

实装的Java语法:
    javadoc（部分，仅读取并格式化，未解析）
    将方法参数命名为_来忽略它
    枚举
        抽象枚举（部分，对反编译器的支持不是很好）
    注解自身（类）
    注解处理
        注解注解数组 @T({@T, @T})
    方法参数
    多级泛型推断
    密封类
    匿名类
        对EnclosingThis和方法变量的引用
    静态内部类和相关的TypeResolver
    接口中的private方法
    对枚举的switch（基于传统SwitchMap）
    switch表达式
    for-each
    try-with-resource

    模块系统（初步，能编译module-info.java）
    多返回值（部分，不能套娃，因为是ThreadLocal）
    解析实现(不能生成代码):
        lambda
            lambda可以按参数数量推断调用的方法了
        字符串模板

新诊断：
    fallthrough
    除数为零
    接口default函数的错误检测（unrelatedDefault）
新语法：
    包导入限制和unimport语句
    部分表达式可以省略分号
    参数注入（通过编译器选项控制编译产物，你可以理解为一种宏）
    包装类支持宽化类型转换，比如byte可以转换为Integer类而不需要额外的cast
    switch的case类型可以为运行时常量（而非编译期常量）
新表达式组件：
    直接赋值(direct assign)操作符
    空值取代(nullish consolidating)操作符 ?? (from JavaScript)
        你可以使用 <可空表达式> ?? <为空时的替代值>
        取代 <表达式1> != null ? <表达式1> : <表达式2>
    可选连接(optional chaining)操作符 ?. (from JavaScript)
新语句：
    with (from JavaScript)
    try-with-defer (from Go)
    for-else (from Python)
新注解：
    Constant
    Switchable
    Getter/Setter
    Property
    ListIterable，任何list-like（包含int size()和T get(int)两个函数）对象都可以使用这个注解来实现省内存的foreach
    Attach注解加入了value以可选的手动指定覆盖的方法名称

优化：
    针对具体RandomAccess|List的性能优化(ListIterable)
    优化MethodList/FieldList寻找方法的性能
    while、do-while、for和if现已全面支持conditional skip
        即：while(false) { ... } 等编译期常量决定不会执行的代码，代码块中的内容不会被解析，而是直接跳过
        不过，不建议在for的条件中使用常量
    重新排序Literal token
    resolve失败的表达式在write阶段不再抛出异常，以检测尽可能多的语法错误
    优化【方法结束检测】使用更精确的判断，避免生成无用的GOTO语句
    将lexer移动到LocalContext

修复：
  二元表达式生成错误
  未正确处理sectionFlag，导致return语句跳转到无效的位置
  var/const检测失败
  反编译器无法反编译SwitchMap和try-finally语句
        注：目前只有fernflower能正确处理我的try-finally
    
  对数组clone方法返回类型的特殊处理
  <glinit>块